@@ -1,3 +1,7 @@
+2004-01-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* game.*: added Game::has_expansion() to check for FoV/SS
+	* objnames.cc: fixed SI-without-SS object names
+
 2004-01-17  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* gamewin.cc: fix check for original gamedat
 	* various: cleaned up some output
